syntax/y.output

state 0
	$accept: .Program $end 

	class  shift 3
	.  error

	Program  goto 1
	MainClass  goto 2

state 1
	$accept:  Program.$end 

	$end  accept
	.  error


state 2
	Program:  MainClass.    (1)
	Program:  MainClass.ClassDeclaration 

	class  shift 5
	.  reduce 1 (src line 81)

	ClassDeclaration  goto 4

state 3
	MainClass:  class.IDENTIFIER LEFTANGLEBRACKET public static void main LEFTPARENTHESIS String LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	IDENTIFIER  shift 6
	.  error


state 4
	Program:  MainClass ClassDeclaration.    (2)

	.  reduce 2 (src line 82)


state 5
	ClassDeclaration:  class.IDENTIFIER Extension LEFTANGLEBRACKET VarDeclaration MethodDeclaration RIGHTANGLEBRACKET 

	IDENTIFIER  shift 7
	.  error


state 6
	MainClass:  class IDENTIFIER.LEFTANGLEBRACKET public static void main LEFTPARENTHESIS String LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	LEFTANGLEBRACKET  shift 8
	.  error


state 7
	ClassDeclaration:  class IDENTIFIER.Extension LEFTANGLEBRACKET VarDeclaration MethodDeclaration RIGHTANGLEBRACKET 
	Extension: .    (5)

	extends  shift 10
	.  reduce 5 (src line 86)

	Extension  goto 9

state 8
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET.public static void main LEFTPARENTHESIS String LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	public  shift 11
	.  error


state 9
	ClassDeclaration:  class IDENTIFIER Extension.LEFTANGLEBRACKET VarDeclaration MethodDeclaration RIGHTANGLEBRACKET 

	LEFTANGLEBRACKET  shift 12
	.  error


state 10
	Extension:  extends.IDENTIFIER 

	IDENTIFIER  shift 13
	.  error


state 11
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET public.static void main LEFTPARENTHESIS String LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	static  shift 14
	.  error


state 12
	ClassDeclaration:  class IDENTIFIER Extension LEFTANGLEBRACKET.VarDeclaration MethodDeclaration RIGHTANGLEBRACKET 
	VarDeclaration: .    (7)

	IDENTIFIER  shift 19
	int  shift 17
	boolean  shift 18
	.  reduce 7 (src line 89)

	VarDeclaration  goto 15
	Type  goto 16

state 13
	Extension:  extends IDENTIFIER.    (6)

	.  reduce 6 (src line 87)


state 14
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET public static.void main LEFTPARENTHESIS String LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	void  shift 20
	.  error


state 15
	ClassDeclaration:  class IDENTIFIER Extension LEFTANGLEBRACKET VarDeclaration.MethodDeclaration RIGHTANGLEBRACKET 
	MethodDeclaration: .    (25)

	public  shift 22
	.  reduce 25 (src line 107)

	MethodDeclaration  goto 21

state 16
	VarDeclaration:  Type.IDENTIFIER SEMICOLON VarDeclaration 

	IDENTIFIER  shift 23
	.  error


state 17
	Type:  int.LEFTBRACKET RIGHTBRACKET 
	Type:  int.    (18)

	LEFTBRACKET  shift 24
	.  reduce 18 (src line 100)


state 18
	Type:  boolean.    (17)

	.  reduce 17 (src line 99)


state 19
	Type:  IDENTIFIER.    (19)

	.  reduce 19 (src line 101)


state 20
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET public static void.main LEFTPARENTHESIS String LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	main  shift 25
	.  error


state 21
	ClassDeclaration:  class IDENTIFIER Extension LEFTANGLEBRACKET VarDeclaration MethodDeclaration.RIGHTANGLEBRACKET 

	RIGHTANGLEBRACKET  shift 26
	.  error


state 22
	MethodDeclaration:  public.Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return Expression SEMICOLON RIGHTANGLEBRACKET 
	MethodDeclaration:  public.Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return Expression SEMICOLON RIGHTANGLEBRACKET MethodDeclaration 

	IDENTIFIER  shift 19
	int  shift 17
	boolean  shift 18
	.  error

	Type  goto 27

state 23
	VarDeclaration:  Type IDENTIFIER.SEMICOLON VarDeclaration 

	SEMICOLON  shift 28
	.  error


state 24
	Type:  int LEFTBRACKET.RIGHTBRACKET 

	RIGHTBRACKET  shift 29
	.  error


state 25
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET public static void main.LEFTPARENTHESIS String LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	LEFTPARENTHESIS  shift 30
	.  error


state 26
	ClassDeclaration:  class IDENTIFIER Extension LEFTANGLEBRACKET VarDeclaration MethodDeclaration RIGHTANGLEBRACKET.    (4)

	.  reduce 4 (src line 85)


state 27
	MethodDeclaration:  public Type.IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return Expression SEMICOLON RIGHTANGLEBRACKET 
	MethodDeclaration:  public Type.IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return Expression SEMICOLON RIGHTANGLEBRACKET MethodDeclaration 

	IDENTIFIER  shift 31
	.  error


28: shift/reduce conflict (shift 19(0), red'n 7(0)) on IDENTIFIER
state 28
	VarDeclaration:  Type IDENTIFIER SEMICOLON.VarDeclaration 
	VarDeclaration: .    (7)

	IDENTIFIER  shift 19
	int  shift 17
	boolean  shift 18
	.  reduce 7 (src line 89)

	VarDeclaration  goto 32
	Type  goto 16

state 29
	Type:  int LEFTBRACKET RIGHTBRACKET.    (16)

	.  reduce 16 (src line 98)


state 30
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET public static void main LEFTPARENTHESIS.String LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	String  shift 33
	.  error


state 31
	MethodDeclaration:  public Type IDENTIFIER.LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return Expression SEMICOLON RIGHTANGLEBRACKET 
	MethodDeclaration:  public Type IDENTIFIER.LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return Expression SEMICOLON RIGHTANGLEBRACKET MethodDeclaration 

	LEFTPARENTHESIS  shift 34
	.  error


state 32
	VarDeclaration:  Type IDENTIFIER SEMICOLON VarDeclaration.    (8)

	.  reduce 8 (src line 90)


state 33
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET public static void main LEFTPARENTHESIS String.LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	LEFTBRACKET  shift 35
	.  error


state 34
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS.MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return Expression SEMICOLON RIGHTANGLEBRACKET 
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS.MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return Expression SEMICOLON RIGHTANGLEBRACKET MethodDeclaration 
	MethodTypeDeclaration: .    (20)

	IDENTIFIER  shift 19
	int  shift 17
	boolean  shift 18
	.  reduce 20 (src line 102)

	Type  goto 37
	MethodTypeDeclaration  goto 36

state 35
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET public static void main LEFTPARENTHESIS String LEFTBRACKET.RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	RIGHTBRACKET  shift 38
	.  error


state 36
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration.RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return Expression SEMICOLON RIGHTANGLEBRACKET 
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration.RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return Expression SEMICOLON RIGHTANGLEBRACKET MethodDeclaration 

	RIGHTPARENTHESIS  shift 39
	.  error


state 37
	MethodTypeDeclaration:  Type.IDENTIFIER 
	MethodTypeDeclaration:  Type.IDENTIFIER COMMA MethodTypeDeclaration 

	IDENTIFIER  shift 40
	.  error


state 38
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET public static void main LEFTPARENTHESIS String LEFTBRACKET RIGHTBRACKET.IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	IDENTIFIER  shift 41
	.  error


state 39
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS.LEFTANGLEBRACKET VarDeclaration Statement return Expression SEMICOLON RIGHTANGLEBRACKET 
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS.LEFTANGLEBRACKET VarDeclaration Statement return Expression SEMICOLON RIGHTANGLEBRACKET MethodDeclaration 

	LEFTANGLEBRACKET  shift 42
	.  error


state 40
	MethodTypeDeclaration:  Type IDENTIFIER.    (21)
	MethodTypeDeclaration:  Type IDENTIFIER.COMMA MethodTypeDeclaration 

	COMMA  shift 43
	.  reduce 21 (src line 103)


state 41
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET public static void main LEFTPARENTHESIS String LEFTBRACKET RIGHTBRACKET IDENTIFIER.RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	RIGHTPARENTHESIS  shift 44
	.  error


42: shift/reduce conflict (shift 19(0), red'n 7(0)) on IDENTIFIER
state 42
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET.VarDeclaration Statement return Expression SEMICOLON RIGHTANGLEBRACKET 
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET.VarDeclaration Statement return Expression SEMICOLON RIGHTANGLEBRACKET MethodDeclaration 
	VarDeclaration: .    (7)

	IDENTIFIER  shift 19
	int  shift 17
	boolean  shift 18
	.  reduce 7 (src line 89)

	VarDeclaration  goto 45
	Type  goto 16

state 43
	MethodTypeDeclaration:  Type IDENTIFIER COMMA.MethodTypeDeclaration 
	MethodTypeDeclaration: .    (20)

	IDENTIFIER  shift 19
	int  shift 17
	boolean  shift 18
	.  reduce 20 (src line 102)

	Type  goto 37
	MethodTypeDeclaration  goto 46

state 44
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET public static void main LEFTPARENTHESIS String LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS.LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	LEFTANGLEBRACKET  shift 47
	.  error


state 45
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration.Statement return Expression SEMICOLON RIGHTANGLEBRACKET 
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration.Statement return Expression SEMICOLON RIGHTANGLEBRACKET MethodDeclaration 
	Statement: .    (15)

	IDENTIFIER  shift 53
	System.out.println  shift 52
	if  shift 50
	while  shift 51
	LEFTANGLEBRACKET  shift 49
	.  reduce 15 (src line 97)

	Statement  goto 48

state 46
	MethodTypeDeclaration:  Type IDENTIFIER COMMA MethodTypeDeclaration.    (22)

	.  reduce 22 (src line 104)


state 47
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET public static void main LEFTPARENTHESIS String LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET.Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 
	Statement: .    (15)

	IDENTIFIER  shift 53
	System.out.println  shift 52
	if  shift 50
	while  shift 51
	LEFTANGLEBRACKET  shift 49
	.  reduce 15 (src line 97)

	Statement  goto 54

state 48
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement.return Expression SEMICOLON RIGHTANGLEBRACKET 
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement.return Expression SEMICOLON RIGHTANGLEBRACKET MethodDeclaration 

	return  shift 55
	.  error


state 49
	Statement:  LEFTANGLEBRACKET.Statement RIGHTANGLEBRACKET 
	Statement: .    (15)

	IDENTIFIER  shift 53
	System.out.println  shift 52
	if  shift 50
	while  shift 51
	LEFTANGLEBRACKET  shift 49
	.  reduce 15 (src line 97)

	Statement  goto 56

state 50
	Statement:  if.LEFTPARENTHESIS Expression RIGHTPARENTHESIS Statement else Statement 

	LEFTPARENTHESIS  shift 57
	.  error


state 51
	Statement:  while.LEFTPARENTHESIS Expression RIGHTPARENTHESIS Statement 

	LEFTPARENTHESIS  shift 58
	.  error


state 52
	Statement:  System.out.println.LEFTPARENTHESIS Expression RIGHTPARENTHESIS SEMICOLON 

	LEFTPARENTHESIS  shift 59
	.  error


state 53
	Statement:  IDENTIFIER.EQUAL Expression SEMICOLON 
	Statement:  IDENTIFIER.LEFTBRACKET Expression RIGHTBRACKET EQUAL Expression SEMICOLON 

	LEFTBRACKET  shift 61
	EQUAL  shift 60
	.  error


state 54
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET public static void main LEFTPARENTHESIS String LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement.RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	RIGHTANGLEBRACKET  shift 62
	.  error


state 55
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return.Expression SEMICOLON RIGHTANGLEBRACKET 
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return.Expression SEMICOLON RIGHTANGLEBRACKET MethodDeclaration 
	Expression: .    (26)

	BANG  shift 69
	INTEGER_LITERAL  shift 64
	BOOLEAN_LITERAL  shift 65
	IDENTIFIER  shift 66
	this  shift 67
	new  shift 68
	LEFTPARENTHESIS  shift 70
	.  reduce 26 (src line 108)

	Expression  goto 63

state 56
	Statement:  LEFTANGLEBRACKET Statement.RIGHTANGLEBRACKET 

	RIGHTANGLEBRACKET  shift 71
	.  error


state 57
	Statement:  if LEFTPARENTHESIS.Expression RIGHTPARENTHESIS Statement else Statement 
	Expression: .    (26)

	BANG  shift 69
	INTEGER_LITERAL  shift 64
	BOOLEAN_LITERAL  shift 65
	IDENTIFIER  shift 66
	this  shift 67
	new  shift 68
	LEFTPARENTHESIS  shift 70
	.  reduce 26 (src line 108)

	Expression  goto 72

state 58
	Statement:  while LEFTPARENTHESIS.Expression RIGHTPARENTHESIS Statement 
	Expression: .    (26)

	BANG  shift 69
	INTEGER_LITERAL  shift 64
	BOOLEAN_LITERAL  shift 65
	IDENTIFIER  shift 66
	this  shift 67
	new  shift 68
	LEFTPARENTHESIS  shift 70
	.  reduce 26 (src line 108)

	Expression  goto 73

state 59
	Statement:  System.out.println LEFTPARENTHESIS.Expression RIGHTPARENTHESIS SEMICOLON 
	Expression: .    (26)

	BANG  shift 69
	INTEGER_LITERAL  shift 64
	BOOLEAN_LITERAL  shift 65
	IDENTIFIER  shift 66
	this  shift 67
	new  shift 68
	LEFTPARENTHESIS  shift 70
	.  reduce 26 (src line 108)

	Expression  goto 74

state 60
	Statement:  IDENTIFIER EQUAL.Expression SEMICOLON 
	Expression: .    (26)

	BANG  shift 69
	INTEGER_LITERAL  shift 64
	BOOLEAN_LITERAL  shift 65
	IDENTIFIER  shift 66
	this  shift 67
	new  shift 68
	LEFTPARENTHESIS  shift 70
	.  reduce 26 (src line 108)

	Expression  goto 75

state 61
	Statement:  IDENTIFIER LEFTBRACKET.Expression RIGHTBRACKET EQUAL Expression SEMICOLON 
	Expression: .    (26)

	BANG  shift 69
	INTEGER_LITERAL  shift 64
	BOOLEAN_LITERAL  shift 65
	IDENTIFIER  shift 66
	this  shift 67
	new  shift 68
	LEFTPARENTHESIS  shift 70
	.  reduce 26 (src line 108)

	Expression  goto 76

state 62
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET public static void main LEFTPARENTHESIS String LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET.RIGHTANGLEBRACKET 

	RIGHTANGLEBRACKET  shift 77
	.  error


state 63
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return Expression.SEMICOLON RIGHTANGLEBRACKET 
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return Expression.SEMICOLON RIGHTANGLEBRACKET MethodDeclaration 
	Expression:  Expression.LOGICALAND Expression 
	Expression:  Expression.LESS Expression 
	Expression:  Expression.PLUS Expression 
	Expression:  Expression.MINUS Expression 
	Expression:  Expression.ASTERIX Expression 
	Expression:  Expression.LEFTBRACKET Expression RIGHTBRACKET 
	Expression:  Expression.PERIOD length 
	Expression:  Expression.PERIOD IDENTIFIER LEFTPARENTHESIS MethodExpressionSignature RIGHTPARENTHESIS 

	LEFTBRACKET  shift 84
	SEMICOLON  shift 78
	PERIOD  shift 85
	PLUS  shift 81
	ASTERIX  shift 83
	LESS  shift 80
	LOGICALAND  shift 79
	MINUS  shift 82
	.  error


state 64
	Expression:  INTEGER_LITERAL.    (35)

	.  reduce 35 (src line 117)


state 65
	Expression:  BOOLEAN_LITERAL.    (36)

	.  reduce 36 (src line 118)


state 66
	Expression:  IDENTIFIER.    (37)

	.  reduce 37 (src line 119)


state 67
	Expression:  this.    (38)

	.  reduce 38 (src line 120)


state 68
	Expression:  new.int LEFTBRACKET Expression RIGHTBRACKET 
	Expression:  new.IDENTIFIER LEFTPARENTHESIS RIGHTPARENTHESIS 

	IDENTIFIER  shift 87
	int  shift 86
	.  error


state 69
	Expression:  BANG.Expression 
	Expression: .    (26)

	BANG  shift 69
	INTEGER_LITERAL  shift 64
	BOOLEAN_LITERAL  shift 65
	IDENTIFIER  shift 66
	this  shift 67
	new  shift 68
	LEFTPARENTHESIS  shift 70
	.  reduce 26 (src line 108)

	Expression  goto 88

state 70
	Expression:  LEFTPARENTHESIS.Expression RIGHTPARENTHESIS 
	Expression: .    (26)

	BANG  shift 69
	INTEGER_LITERAL  shift 64
	BOOLEAN_LITERAL  shift 65
	IDENTIFIER  shift 66
	this  shift 67
	new  shift 68
	LEFTPARENTHESIS  shift 70
	.  reduce 26 (src line 108)

	Expression  goto 89

state 71
	Statement:  LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET.    (9)

	.  reduce 9 (src line 91)


state 72
	Statement:  if LEFTPARENTHESIS Expression.RIGHTPARENTHESIS Statement else Statement 
	Expression:  Expression.LOGICALAND Expression 
	Expression:  Expression.LESS Expression 
	Expression:  Expression.PLUS Expression 
	Expression:  Expression.MINUS Expression 
	Expression:  Expression.ASTERIX Expression 
	Expression:  Expression.LEFTBRACKET Expression RIGHTBRACKET 
	Expression:  Expression.PERIOD length 
	Expression:  Expression.PERIOD IDENTIFIER LEFTPARENTHESIS MethodExpressionSignature RIGHTPARENTHESIS 

	LEFTBRACKET  shift 84
	RIGHTPARENTHESIS  shift 90
	PERIOD  shift 85
	PLUS  shift 81
	ASTERIX  shift 83
	LESS  shift 80
	LOGICALAND  shift 79
	MINUS  shift 82
	.  error


state 73
	Statement:  while LEFTPARENTHESIS Expression.RIGHTPARENTHESIS Statement 
	Expression:  Expression.LOGICALAND Expression 
	Expression:  Expression.LESS Expression 
	Expression:  Expression.PLUS Expression 
	Expression:  Expression.MINUS Expression 
	Expression:  Expression.ASTERIX Expression 
	Expression:  Expression.LEFTBRACKET Expression RIGHTBRACKET 
	Expression:  Expression.PERIOD length 
	Expression:  Expression.PERIOD IDENTIFIER LEFTPARENTHESIS MethodExpressionSignature RIGHTPARENTHESIS 

	LEFTBRACKET  shift 84
	RIGHTPARENTHESIS  shift 91
	PERIOD  shift 85
	PLUS  shift 81
	ASTERIX  shift 83
	LESS  shift 80
	LOGICALAND  shift 79
	MINUS  shift 82
	.  error


state 74
	Statement:  System.out.println LEFTPARENTHESIS Expression.RIGHTPARENTHESIS SEMICOLON 
	Expression:  Expression.LOGICALAND Expression 
	Expression:  Expression.LESS Expression 
	Expression:  Expression.PLUS Expression 
	Expression:  Expression.MINUS Expression 
	Expression:  Expression.ASTERIX Expression 
	Expression:  Expression.LEFTBRACKET Expression RIGHTBRACKET 
	Expression:  Expression.PERIOD length 
	Expression:  Expression.PERIOD IDENTIFIER LEFTPARENTHESIS MethodExpressionSignature RIGHTPARENTHESIS 

	LEFTBRACKET  shift 84
	RIGHTPARENTHESIS  shift 92
	PERIOD  shift 85
	PLUS  shift 81
	ASTERIX  shift 83
	LESS  shift 80
	LOGICALAND  shift 79
	MINUS  shift 82
	.  error


state 75
	Statement:  IDENTIFIER EQUAL Expression.SEMICOLON 
	Expression:  Expression.LOGICALAND Expression 
	Expression:  Expression.LESS Expression 
	Expression:  Expression.PLUS Expression 
	Expression:  Expression.MINUS Expression 
	Expression:  Expression.ASTERIX Expression 
	Expression:  Expression.LEFTBRACKET Expression RIGHTBRACKET 
	Expression:  Expression.PERIOD length 
	Expression:  Expression.PERIOD IDENTIFIER LEFTPARENTHESIS MethodExpressionSignature RIGHTPARENTHESIS 

	LEFTBRACKET  shift 84
	SEMICOLON  shift 93
	PERIOD  shift 85
	PLUS  shift 81
	ASTERIX  shift 83
	LESS  shift 80
	LOGICALAND  shift 79
	MINUS  shift 82
	.  error


state 76
	Statement:  IDENTIFIER LEFTBRACKET Expression.RIGHTBRACKET EQUAL Expression SEMICOLON 
	Expression:  Expression.LOGICALAND Expression 
	Expression:  Expression.LESS Expression 
	Expression:  Expression.PLUS Expression 
	Expression:  Expression.MINUS Expression 
	Expression:  Expression.ASTERIX Expression 
	Expression:  Expression.LEFTBRACKET Expression RIGHTBRACKET 
	Expression:  Expression.PERIOD length 
	Expression:  Expression.PERIOD IDENTIFIER LEFTPARENTHESIS MethodExpressionSignature RIGHTPARENTHESIS 

	LEFTBRACKET  shift 84
	RIGHTBRACKET  shift 94
	PERIOD  shift 85
	PLUS  shift 81
	ASTERIX  shift 83
	LESS  shift 80
	LOGICALAND  shift 79
	MINUS  shift 82
	.  error


state 77
	MainClass:  class IDENTIFIER LEFTANGLEBRACKET public static void main LEFTPARENTHESIS String LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET.    (3)

	.  reduce 3 (src line 84)


state 78
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return Expression SEMICOLON.RIGHTANGLEBRACKET 
	MethodDeclaration:  public Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement return Expression SEMICOLON.RIGHTANGLEBRACKET MethodDeclaration 

	RIGHTANGLEBRACKET  shift 95
	.  error


state 79
	Expression:  Expression LOGICALAND.Expression 
	Expression: .    (26)

	BANG  shift 69
	INTEGER_LITERAL  shift 64
	BOOLEAN_LITERAL  shift 65
	IDENTIFIER  shift 66
	this  shift 67
	new  shift 68
	LEFTPARENTHESIS  shift 70
	.  reduce 26 (src line 108)

	Expression  goto 96

state 80
	Expression:  Expression LESS.Expression 
	Expression: .    (26)

	BANG  shift 69
	INTEGER_LITERAL  shift 64
	BOOLEAN_LITERAL  shift 65
	IDENTIFIER  shift 66
	this  shift 67
	new  shift 68
	LEFTPARENTHESIS  shift 70
	.  reduce 26 (src line 108)

	Expression  goto 97

state 81
	Expression:  Expression PLUS.Expression 
	Expression: .    (26)

	BANG  shift 69
	INTEGER_LITERAL  shift 64
	BOOLEAN_LITERAL  shift 65
	IDENTIFIER  shift 66
	this  shift 67
	new  shift 68
	LEFTPARENTHESIS  shift 70
	.  reduce 26 (src line 108)

	Expression  goto 98

state 82
	Expression:  Expression MINUS.Expression 
	Expression: .    (26)

	BANG  shift 69
	INTEGER_LITERAL  shift 64
	BOOLEAN_LITERAL  shift 65
	IDENTIFIER  shift 66
	this  shift 67
	new  shift 68
	LEFTPARENTHESIS  shift 70
	.  reduce 26 (src line 108)

	Expression  goto 99

state 83
	Expression:  Expression ASTERIX.Expression 
	Expression: .    (26)

	BANG  shift 69
	INTEGER_LITERAL  shift 64
	BOOLEAN_LITERAL  shift 65
	IDENTIFIER  shift 66
	this  shift 67
	new  shift 68
	LEFTPARENTHESIS  shift 70
	.  reduce 26 (src line 108)

	Expression  goto 100

state 84
	Expression:  Expression LEFTBRACKET.Expression RIGHTBRACKET 
	Expression: .    (26)

	BANG  shift 69
	INTEGER_LITERAL  shift 64
	BOOLEAN_LITERAL  shift 65
	IDENTIFIER  shift 66
	this  shift 67
	new  shift 68
	LEFTPARENTHESIS  shift 70
	.  reduce 26 (src line 108)

	Expression  goto 101

state 85
	Expression:  Expression PERIOD.length 
	Expression:  Expression PERIOD.IDENTIFIER LEFTPARENTHESIS MethodExpressionSignature RIGHTPARENTHESIS 

	IDENTIFIER  shift 103
	length  shift 102
	.  error


state 86
	Expression:  new int.LEFTBRACKET Expression RIGHTBRACKET 

	LEFTBRACKET  shift 104
	.  error


state 87
	Expression:  new IDENTIFIER.LEFTPARENTHESIS RIGHTPARENTHESIS 

	LEFTPARENTHESIS  shift 105
	.  error


88: shift/reduce conflict (shift 84(0), red'n 41(0)) on LEFTBRACKET
88: shift/reduce conflict (shift 85(0), red'n 41(0)) on PERIOD
88: shift/reduce conflict (shift 81(0), red'n 41(0)) on PLUS
88: shift/reduce conflict (shift 83(0), red'n 41(0)) on ASTERIX
88: shift/reduce conflict (shift 80(0), red'n 41(0)) on LESS
88: shift/reduce conflict (shift 79(0), red'n 41(0)) on LOGICALAND
88: shift/reduce conflict (shift 82(0), red'n 41(0)) on MINUS
state 88
	Expression:  Expression.LOGICALAND Expression 
	Expression:  Expression.LESS Expression 
	Expression:  Expression.PLUS Expression 
	Expression:  Expression.MINUS Expression 
	Expression:  Expression.ASTERIX Expression 
	Expression:  Expression.LEFTBRACKET Expression RIGHTBRACKET 
	Expression:  Expression.PERIOD length 
	Expression:  Expression.PERIOD IDENTIFIER LEFTPARENTHESIS MethodExpressionSignature RIGHTPARENTHESIS 
	Expression:  BANG Expression.    (41)

	LEFTBRACKET  shift 84
	PERIOD  shift 85
	PLUS  shift 81
	ASTERIX  shift 83
	LESS  shift 80
	LOGICALAND  shift 79
	MINUS  shift 82
	.  reduce 41 (src line 123)


state 89
	Expression:  Expression.LOGICALAND Expression 
	Expression:  Expression.LESS Expression 
	Expression:  Expression.PLUS Expression 
	Expression:  Expression.MINUS Expression 
	Expression:  Expression.ASTERIX Expression 
	Expression:  Expression.LEFTBRACKET Expression RIGHTBRACKET 
	Expression:  Expression.PERIOD length 
	Expression:  Expression.PERIOD IDENTIFIER LEFTPARENTHESIS MethodExpressionSignature RIGHTPARENTHESIS 
	Expression:  LEFTPARENTHESIS Expression.RIGHTPARENTHESIS 

	LEFTBRACKET  shift 84
	RIGHTPARENTHESIS  shift 106
	PERIOD  shift 85
	PLUS  shift 81
	ASTERIX  shift 83
	LESS  shift 80
	LOGICALAND  shift 79
	MINUS  shift 82
	.  error


state 90
	Statement:  if LEFTPARENTHESIS Expression RIGHTPARENTHESIS.Statement else Statement 
	Statement: .    (15)

	IDENTIFIER  shift 53
	System.out.println  shift 52
	if  shift 50
	while  shift 51
	LEFTANGLEBRACKET  shift 49
	.  reduce 15 (src line 97)

	Statement  goto 107

state 91
	Statement:  while LEFTPARENTHESIS Expression RIGHTPARENTHESIS.Statement 
	Statement: .    (15)

	IDENTIFIER  shift 53
	System.out.println  shift 52
	if  shift 50
	while  shift 51
	LEFTANGLEBRACKET  shift 49
	.  reduce 15 (src line 97)

	Statement  goto 108
